output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_587.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_587.py", line 94
    /* else (pos[0]==4): */ durations[4])))
    ^
SyntaxError: invalid syntax
